--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
       </div>
 	  
 	  <!-- Header Links -->	
-	<div>
-		<button type="button" class="btn btn-light" style="width:150px;height:150px;min-width:150px;min-height:150px;" onclick="window.open('http://www.youtube.com/comp3interactive')"><img src="img/SocialIcons/YouTube.png" class="img-fluid" alt=""></br>YouTube</button>
-		<button type="button" class="btn btn-light" style="width:150px;height:150px;min-width:150px;min-height:150px;" onclick="window.open('http://www.facebook.com/comp3.interactive')"><img src="img/SocialIcons/Facebook.png" class="img-fluid" alt=""></br>Facebook</button>
-		<button type="button" class="btn btn-light" style="width:150px;height:150px;min-width:150px;min-height:150px;" onclick="window.open('http://www.instagram.com/comp3.interactive')"><img src="img/SocialIcons/Instagram.png" class="img-fluid" alt=""></br>Instagram</button></br></br>
-		<button type="button" class="btn btn-light" style="width:150px;height:150px;min-width:150px;min-height:150px;" onclick="window.open('http://www.twitter.com/comp3int')"><img src="img/SocialIcons/Twitter.png" class="img-fluid" alt=""></br>Twitter</button>
-		<button type="button" class="btn btn-light" style="width:150px;height:150px;min-width:150px;min-height:150px;" onclick="window.open('https://play.google.com/store/apps/dev?id=7011346453411226050')"><img src="img/SocialIcons/GooglePlay.png" class="img-fluid" alt=""></br>Google Play</button>
-		<button type="button" class="btn btn-light" style="width:150px;height:15px;min-width:150px;min-height:150px;" onclick="window.open('https://www.buymeacoffee.com/4dpS3yL')"><img src="img/SocialIcons/BuyMeACoffee.png" class="img-fluid" alt=""></br>Buy Me A Coffee</button></br></br></br>
+	<div class="container">
+		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('http://www.youtube.com/comp3interactive')"><img src="img/SocialIcons/YouTube.png" class="img-fluid" alt="">          YouTube</button></br></br>
+		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('http://www.facebook.com/comp3.interactive')"><img src="img/SocialIcons/Facebook.png" class="img-fluid" alt="">          Facebook</button></br></br>
+		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('http://www.instagram.com/comp3.interactive')"><img src="img/SocialIcons/Instagram.png" class="img-fluid" alt="">          Instagram</button></br></br>
+		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('http://www.twitter.com/comp3int')"><img src="img/SocialIcons/Twitter.png" class="img-fluid" alt="">          Twitter</button></br></br>
+		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('https://play.google.com/store/apps/dev?id=7011346453411226050')"><img src="img/SocialIcons/GooglePlay.png" class="img-fluid" alt="">          Google Play</button></br></br>
+		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('https://www.buymeacoffee.com/4dpS3yL')"><img src="img/SocialIcons/BuyMeACoffee.png" class="img-fluid" alt="">          Buy Me A Coffee</button></br></br></br>
     </div>
   </section>
 
