--- a/index.html
+++ b/index.html
@@ -39,13 +39,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">Find Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -62,7 +59,7 @@
       </div>
 	  
 	  <!-- Header Links -->	
-	<div class="container">
+	<div>
 		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('http://www.youtube.com/comp3interactive')"><img src="img/SocialIcons/YouTube.png" class="img-fluid" alt="">          YouTube</button></br></br>
 		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('http://www.facebook.com/comp3.interactive')"><img src="img/SocialIcons/Facebook.png" class="img-fluid" alt="">          Facebook</button></br></br>
 		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('http://www.instagram.com/comp3.interactive')"><img src="img/SocialIcons/Instagram.png" class="img-fluid" alt="">          Instagram</button></br></br>
@@ -73,7 +70,7 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="projects-section bg-light">
+  <section id="projects" class="projects-section bg-black">
     <div class="container">
 
       <!-- Project One Row -->
@@ -82,12 +79,18 @@
           <img class="img-fluid" src="img/Ascension/AscensionBlock.png" alt="">
         </div>
         <div class="col-lg-6">
-          <div class="bg-black text-center h-100 project">
+          <div class="bg-light text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Ascension</h4>
-                <p class="mb-0 text-white-50">Ascension description</p></br>
-				<button type="button" class="btn btn-light" style="width:150px;height:5em;min-width:150px;">Play Here</button>
+                <h1 class="text-black">Ascension</h1>
+                <p class="mb-0 text-black-50">
+				<p>
+					Ascension is our first "major" project using the Unity3D engine. All in all, development took approximately 2 months from inception to completion.</p>
+					It's a simple mobile game at it's core where the player can tap on either side of the screen to perform in-game actions.</br>
+					Tapping on the left side of the screen will attack and tapping on the right side of the screen will jump to the next platform</p>
+					With 70 unique characters and 21 unique weapons to grind and unlock, this game could provide hours of boredom killing fun!</p>
+					Ascension is available NOW on the Google Play Store so start climbing, looting and killing!</p></br>
+				<button type="button" class="btn btn-dark" style="width:300px;height:5em;min-width:300px;" onclick="window.open('https://play.google.com/store/apps/details?id=com.Comp3Interactive.Ascension')">Play Ascension Here</button>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -118,30 +121,8 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="contact-section bg-black">
-    <div class="container">
-
-      <div class="row justify-content-center">
-
-        <div class="col-md-4 mb-3 mb-md-0">
-          <div class="card py-4 h-100">
-            <div class="card-body text-center">
-              <i class="fas fa-envelope text-primary mb-2"></i>
-              <h4 class="text-uppercase m-0">Direct Contact</h4>
-              <hr class="my-4">
-              <div class="small text-black-50">
-				<a href="mailto:comp3.interactive@gmail.com">comp3.interactive@gmail.com</a> 
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- Footer -->
-  <footer class="bg-black small text-center text-white-50">
+  <footer class="bg-dark small text-center text-white-50">
   	<div>
 		<a href="#page-top"><img src="img/NavBarIcon.png"></a></p>
 	</div>
