--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Find Us</a>
+            <a class="nav-link js-scroll-trigger" href="#socials">Find Us</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
@@ -49,8 +52,8 @@
     </div>
   </nav>
 
-  <!-- About Section -->
-  <section id="about" class="about-section text-center">
+  <!-- Socials Section -->
+  <section id="socials" class="about-section text-center">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -60,35 +63,78 @@
 	  
 	  <!-- Header Links -->	
 	<div>
-		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('http://www.youtube.com/comp3interactive')"><img src="img/SocialIcons/YouTube.png" class="img-fluid" alt="">          YouTube</button></br></br>
-		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('http://www.facebook.com/comp3.interactive')"><img src="img/SocialIcons/Facebook.png" class="img-fluid" alt="">          Facebook</button></br></br>
-		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('http://www.instagram.com/comp3.interactive')"><img src="img/SocialIcons/Instagram.png" class="img-fluid" alt="">          Instagram</button></br></br>
-		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('http://www.twitter.com/comp3int')"><img src="img/SocialIcons/Twitter.png" class="img-fluid" alt="">          Twitter</button></br></br>
-		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('https://play.google.com/store/apps/dev?id=7011346453411226050')"><img src="img/SocialIcons/GooglePlay.png" class="img-fluid" alt="">          Google Play</button></br></br>
-		<button type="button" class="btn btn-dark" style="width:300px;height:100px;min-width:300px;min-height:100px;" onclick="window.open('https://www.buymeacoffee.com/4dpS3yL')"><img src="img/SocialIcons/BuyMeACoffee.png" class="img-fluid" alt="">          Buy Me A Coffee</button></br></br></br>
+		<button type="button" class="btn btn-dark" style="width:300px;height:7em;min-width:300px;min-height:7em;" onclick="window.open('http://www.youtube.com/comp3interactive')"><img src="img/SocialIcons/YouTube.png" class="img-fluid" alt="">          YouTube</button></br></br>
+		<button type="button" class="btn btn-dark" style="width:300px;height:7em;min-width:300px;min-height:7em;" onclick="window.open('http://www.facebook.com/comp3.interactive')"><img src="img/SocialIcons/Facebook.png" class="img-fluid" alt="">          Facebook</button></br></br>
+		<button type="button" class="btn btn-dark" style="width:300px;height:7em;min-width:300px;min-height:7em;" onclick="window.open('http://www.instagram.com/comp3.interactive')"><img src="img/SocialIcons/Instagram.png" class="img-fluid" alt="">          Instagram</button></br></br>
+		<button type="button" class="btn btn-dark" style="width:300px;height:7em;min-width:300px;min-height:7em;" onclick="window.open('http://www.twitter.com/comp3int')"><img src="img/SocialIcons/Twitter.png" class="img-fluid" alt="">          Twitter</button></br></br>
+		<button type="button" class="btn btn-dark" style="width:300px;height:7em;min-width:300px;min-height:7em;" onclick="window.open('https://play.google.com/store/apps/dev?id=7011346453411226050')"><img src="img/SocialIcons/GooglePlay.png" class="img-fluid" alt="">          Google Play</button></br></br>
+		<button type="button" class="btn btn-dark" style="width:300px;height:7em;min-width:300px;min-height:7em;" onclick="window.open('https://www.buymeacoffee.com/4dpS3yL')"><img src="img/SocialIcons/BuyMeACoffee.png" class="img-fluid" alt="">          Buy Me A Coffee</button></br></br></br>
+    </div>
+  </section>
+  
+  <!-- About Section -->
+  <section id="about" class="projects-section bg-black">
+    <div class="container">
+
+      <!-- Project One Row -->
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="col-lg-6">
+          <div class="bg-dark text-center h-100 project">
+            <div class="d-flex h-100">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h1 class="text-white">About Us</h1>
+                <p class="mb-0 text-white-50">
+					We're <b>Comp-3 Interactive</b>. An indie game development company located in the North West of England. We provide free to play Android mobile games via the Google Play store.</br></br>
+					We also help both seasoned and beginner developers on their journey of game development by providing useful hints and tips for the Unity3D game engine via our Facebook, Instagram and Twitter accounts.</br></br>
+					Further to that, we also provide more in-depth tutorials for Unity3D on our YouTube channel which cover a wide array of subjects.</br></br>
+					Consider following and subscribing if you'd like to learn how to make your own games in a quick and painless way!</br></br></p>
+					
+					<div class="social d-flex justify-content-center">
+						<a href="http://www.youtube.com/comp3interactive" class="mx-2">
+							<i class="fab fa-youtube"></i>
+						</a>
+						<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+							<i class="fab fa-facebook"></i>
+						</a>
+						<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
+							<i class="fab fa-instagram"></i>
+						</a>
+						<a href="http://www.twitter.com/comp3int" class="mx-2">
+							<i class="fab fa-twitter"></i>
+						</a>
+					</div>
+					
+                <hr class="d-none d-lg-block mb-0 ml-0">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
   <!-- Projects Section -->
   <section id="projects" class="projects-section bg-black">
     <div class="container">
+	
+	  <h1 class="text-white text-center">Recent Projects</h1></br>
 
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/Ascension/AscensionBlock.png" alt="">
         </div>
+		
         <div class="col-lg-6">
-          <div class="bg-light text-center h-100 project">
+          <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h1 class="text-black">Ascension</h1>
-                <p class="mb-0 text-black-50">
-				<p>
-					Ascension is our first "major" project using the Unity3D engine. All in all, development took approximately 2 months from inception to completion.</p>
-					It's a simple mobile game at it's core where the player can tap on either side of the screen to perform in-game actions.</br>
-					Tapping on the left side of the screen will attack and tapping on the right side of the screen will jump to the next platform</p>
-					With 70 unique characters and 21 unique weapons to grind and unlock, this game could provide hours of boredom killing fun!</p>
+                <h1 class="text-white">Ascension</h1>
+                <p class="mb-0 text-white-50">
+					Ascension is our first "major" project using the Unity3D engine. All in all, development took approximately 2 months from inception to completion.</br></br>
+					It's a simple mobile game at it's core where the player can tap on either side of the screen to perform in-game actions.</br></br>
+					Tapping on the left side of the screen will attack and tapping on the right side of the screen will jump to the next platform
+					With 70 unique characters and 21 unique weapons to grind and unlock, this game could provide hours of boredom killing fun!</br></br>
 					Ascension is available NOW on the Google Play Store so start climbing, looting and killing!</p></br>
 				<button type="button" class="btn btn-dark" style="width:200px;height:5em;min-width:200px;" onclick="window.open('https://play.google.com/store/apps/details?id=com.Comp3Interactive.Ascension')">Play Here</button>
                 <hr class="d-none d-lg-block mb-0 ml-0">
@@ -99,19 +145,24 @@
       </div>
 
       <!-- Project Two Row -->
-	  <!-- Uncomment to have alternating image sides-->
-      <!-- <div class="row justify-content-center no-gutters">
+      <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
           <img class="img-fluid" src="img/Ascension/AscensionBlock.png" alt="">
         </div>
-        <div class="col-lg-6 order-lg-first">
+		
+        <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Ascension</h4>
-                <p class="mb-0 text-white-50">Ascension description</p></br>
-				<button type="button" class="btn btn-light" style="width:150px;height:5em;min-width:150px;">Play Here</button>
-                <hr class="d-none d-lg-block mb-0 mr-0">
+              <div class="project-text w-100 my-auto text-center text-lg-left">
+                <h1 class="text-white">Ascension</h1>
+                <p class="mb-0 text-white-50">
+					Ascension is our first "major" project using the Unity3D engine. All in all, development took approximately 2 months from inception to completion.</br></br>
+					It's a simple mobile game at it's core where the player can tap on either side of the screen to perform in-game actions.</br></br>
+					Tapping on the left side of the screen will attack and tapping on the right side of the screen will jump to the next platform
+					With 70 unique characters and 21 unique weapons to grind and unlock, this game could provide hours of boredom killing fun!</br></br>
+					Ascension is available NOW on the Google Play Store so start climbing, looting and killing!</p></br>
+				<button type="button" class="btn btn-dark" style="width:200px;height:5em;min-width:200px;" onclick="window.open('https://play.google.com/store/apps/details?id=com.Comp3Interactive.Ascension')">Play Here</button>
+                <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
           </div>
