--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
   <meta charset="utf-8">
@@ -27,7 +26,6 @@
 </head>
 
 <body id="page-top">
-
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
@@ -39,13 +37,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#socials">Find Us</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#socials">Find Us</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About Us</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#about">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#projects">Current Projects</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="previousprojects.html">Previous Projects</a>
           </li>
         </ul>
       </div>
@@ -117,12 +118,12 @@
   <section id="projects" class="projects-section bg-black">
     <div class="container">
 	
-	  <h1 class="text-white text-center">Recent Projects</h1></br>
+	  <h1 class="text-white text-center">Current Projects</h1></br>
 
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/Ascension/AscensionBlock.png" alt="">
+          <img class="img-fluid" src="img/Projects/AscensionBlock.png" alt="">
         </div>
 		
         <div class="col-lg-6">
@@ -135,7 +136,8 @@
 					It's a simple mobile game at it's core where the player can tap on either side of the screen to perform in-game actions.</br></br>
 					Tapping on the left side of the screen will attack and tapping on the right side of the screen will jump to the next platform
 					With 70 unique characters and 21 unique weapons to grind and unlock, this game could provide hours of boredom killing fun!</br></br>
-					Ascension is available NOW on the Google Play Store so start climbing, looting and killing!</p></br>
+					Ascension is available NOW on the Google Play Store so start climbing, looting and killing!
+					</p></br>
 				<button type="button" class="btn btn-dark" style="width:200px;height:5em;min-width:200px;" onclick="window.open('https://play.google.com/store/apps/details?id=com.Comp3Interactive.Ascension')">Play Here</button>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
@@ -145,29 +147,28 @@
       </div>
 
       <!-- Project Two Row -->
-      <!-- <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/Ascension/AscensionBlock.png" alt="">
+          <img class="img-fluid" src="img/Projects/SpeedDev.png" alt="">
         </div>
 		
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h1 class="text-white">Ascension</h1>
+                <h1 class="text-white">Unknown Speed Development Project</h1>
                 <p class="mb-0 text-white-50">
-					Ascension is our first "major" project using the Unity3D engine. All in all, development took approximately 2 months from inception to completion.</br></br>
-					It's a simple mobile game at it's core where the player can tap on either side of the screen to perform in-game actions.</br></br>
-					Tapping on the left side of the screen will attack and tapping on the right side of the screen will jump to the next platform
-					With 70 unique characters and 21 unique weapons to grind and unlock, this game could provide hours of boredom killing fun!</br></br>
-					Ascension is available NOW on the Google Play Store so start climbing, looting and killing!</p></br>
-				<button type="button" class="btn btn-dark" style="width:200px;height:5em;min-width:200px;" onclick="window.open('https://play.google.com/store/apps/details?id=com.Comp3Interactive.Ascension')">Play Here</button>
+					So it seems as though, in a drunken state, I challenged myself to develop a game and release it on Google Play within a week! This may have been a stupid idea but I may aswell give it a try!</br></br>
+					As of writing this I am approximatly 12 hours in to my given week and seem to have made some decent progress considering my state during the initial development!!</br></br>
+					I'll be posting further updates on Facebook regarding the development process and will be sure to announce it's release here too!</br></br>
+					WISH ME LUCK!
+				</p></br>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
 
     </div>
   </section>
