--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/NavBarIcon.png" class="img-fluid" alt="">     Comp-3 Interactive</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,10 +38,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#socials">Find Us</a>
-          </li>
-		  <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#about">About Us</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#socials">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="index.html#projects">Current Projects</a>
@@ -49,18 +46,45 @@
 		  <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="previousprojects.html">Previous Projects</a>
           </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="index.html#about">About Us</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Footer -->
+    <section id="404" class="about-section text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <img src="img/404.png" class="img-fluid" alt=""></br>
+		  <button type="button" class="btn btn-light" style="width:200px;height:6em;min-width:200px;min-height:6em;" onclick="window.location.href ='index.html';">Back to Civilization</button></br></br>
+        </div>
+      </div>
+	</div>
+  </section> 
+
   <footer class="bg-dark small text-center text-white-50">
   	<div>
 		<a href="#page-top"><img src="img/NavBarIcon.png"></a></p>
 	</div>
     <div class="container">
-      Copyright &copy; <b>Comp-3 Interactive 2019</b>.</br>All rights reserved.
+      Copyright &copy; <b>Comp-3 Interactive 2019</b>.</br>All rights reserved.<p>
+	  <div class="social d-flex justify-content-center">
+		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
+			<i class="fab fa-youtube"></i>
+		</a>
+		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+			<i class="fab fa-facebook"></i>
+		</a>
+		<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
+			<i class="fab fa-instagram"></i>
+		</a>
+		<a href="http://www.twitter.com/comp3int" class="mx-2">
+			<i class="fab fa-twitter"></i> <p>
+		</a>
+	</div>
     </div>
   </footer>
 
