--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					As of writing this I am approximatly 12 hours in to my given week and seem to have made some decent progress considering my state during the initial development!!</br></br>
 					I'll be posting further updates on Facebook regarding the development process and will be sure to announce it's release here too!</br></br>
 					WISH ME LUCK!
-				</p></br>
+				</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -163,8 +163,10 @@
 							<i class="fab fa-twitter"></i>
 						</a>
 					</div>
-					
                 <hr class="d-none d-lg-block mb-0 ml-0">
+				<p class="mb-0 text-white-50"></br>
+					For business enquiries please contact: <a href="mailto:comp3.interactive@gmail.com">comp3.interactive@gmail.com</a>
+				</p>
               </div>
             </div>
           </div>
