--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
 					With 70 unique characters and 21 unique weapons to grind and unlock, this game could provide hours of boredom killing fun!</br></br>
 					Ascension is available NOW on the Google Play Store so start climbing, looting and killing!
 					</p></br>
-				<button type="button" class="btn btn-dark" style="width:200px;height:5em;min-width:200px;" onclick="window.open('https://play.google.com/store/apps/details?id=com.Comp3Interactive.Ascension')">Play Here</button>
+					<iframe width="373" height="210" src="https://www.youtube.com/embed/4xxsuBlahZo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></br></br>
+					
+					<button type="button" class="btn btn-dark" style="width:200px;height:5em;min-width:200px;" onclick="window.open('https://play.google.com/store/apps/details?id=com.Comp3Interactive.Ascension')">Play Here</button>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
