--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/NavBarIcon.png" class="img-fluid" alt="">     Comp-3 Interactive</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/NavBarIcon.png" width="25px" height ="25px" class="img-fluid" alt="">     Comp-3 Interactive</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -82,7 +82,7 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/Projects/AscensionBlock.png" alt="">
+          <center><img class="img-fluid" src="img/Projects/AscensionBlock.png" alt=""></center>
         </div>
 		
         <div class="col-lg-6">
@@ -110,7 +110,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/Projects/SpeedDev.png" alt="">
+          <center><img class="img-fluid" src="img/Projects/SpeedDev.png" alt=""></center>
         </div>
 		
         <div class="col-lg-6">
